--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
         margin: 0;
       }
     </style>
-    <!-- <script type="text/javascript" src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
+    <!-- <script type="text/javascript" src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.js"></script> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
