--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,12 @@
         margin: 0;
       }
     </style>
-    <!-- <script type="text/javascript" src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.js"></script> -->
+    <!-- 
+      <script type="text/javascript" src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+      <script type="text/javascript" src="./node_modules/jquery/dist/jquery.js"></script>
+     -->
+     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -27,5 +31,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+
 
 </html>
